--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -253,7 +253,7 @@ Jurd knew to watch Thag carefully at this point, using his master's subtle cues 
 He began again in what stood in for a "quiet" voice in the enormous hillside theater. Jurd was skilled at the seemingly impossible; whispering such that it could be heard one half of one palm away.
 
 #+begin_quote
-Then it came, eventually.
+Then it came.
 
 I am unable to puzzle together any of what took place behind me of course, as I was walking in my own little world at night in the woods, lost in thought; an older all-finger-and boy who could kick some ham on the monkey-ground[fn:: Playground. More any place where play takes place.], but was no match to a lizard-bird.
 #+end_quote
