--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -255,6 +255,10 @@ He began again in what stood in for a "quiet" voice in the enormous hillside the
 #+begin_quote
 Then it came.
 
+#+end_quote
+There was a random unaccountable juvenile snicker.
+#+begin_quote
+
 I am unable to puzzle together any of what took place behind me of course, as I was walking in my own little world at night in the woods, lost in thought; an older all-finger-and boy who could kick some ham on the monkey-ground[fn:: Playground. More any place where play takes place.], but was no match to a lizard-bird.
 #+end_quote
 
