--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -262,7 +262,7 @@ There was a random unaccountable juvenile snicker.
 I am unable to puzzle together any of what took place behind me of course, as I was walking in my own little world at night in the woods, lost in thought; an older all-finger-and boy who could kick some ham on the monkey-ground[fn:: Playground. More, any place where play takes place.], but was no match to a lizard-bird.
 #+end_quote
 
-Thag always had legitimate lament he could tap into at any time to bring the mood of the house back down to "somber". It was actually something that could be "tapped" in kind of the same way a keg of champagne can be: Carefully; sometimes, often, disastrously. You got a lot more champagne than you anticipated. At this, he was practiced.
+Thag always had legitimate lament he could tap into at any time to bring the mood of the house back down to "somber". It was actually something that could be "tapped" in kind of the same way a keg of champagne can be: Carefully; sometimes, often, disastrously. You got a lot more champagne than you anticipated. At this, he was practiced, for if his cues changed in ways that were hard for Jurd to read, the performance suffered.
 
 But it was true that Thag was afraid of lizard-bird still, in a way that makes your arachnophobia seem well-considered and rational.
 
