--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -277,7 +277,7 @@ He rode me like a hill-sled for probably four man. Talons squeezing as we slid. 
 Thag trailed off, eyes empty. The children continued to watch until he shook himself and continued.
 
 #+begin_quote
-It was standing on top of me. And it was /heavey/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible in /me/.
+It was standing on top of me. And it was /heavey/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible .../in me/!
 #+end_quote
 
 The speaker paused only briefly this time.
