--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -287,7 +287,7 @@ Once it was sure it had a good hold of me, I guess it wanted to make sure I was 
 
 And indeed that's where the first gap in my memory lives, although I'm able to fill it with all kinds of nightmares, and sometimes do. Don't lament small game[fn:: Don't sweat the small stuff. Don't cry over spilled milk.], kids.
 
-When I came too, it was because he was slowing his flight to set me on his perch. It was a scat and bone covered fortress of sorts. It was clear that she[fn:: The male lizard-bird are xxx.] and she alone lived there. It was literally in the clouds so I only had the slightest idea, at least initially, of where I was and what was going on any more than all-finger man away.
+When I came back around the first time, it was because he was slowing his flight to set me on his perch. It was a scat and bone covered fortress of sorts. It was clear that she[fn:: The male lizard-bird are xxx.] and she alone lived there. It was literally in the clouds so I only had the slightest idea, at least initially, of where I was and what was going on any more than all-finger man away.
 
 I would soon find out. He started eating me at this point.
 #+end_quote
