--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -277,7 +277,7 @@ He rode me like a hill-sled for probably four man. Talons squeezing as we slid. 
 Thag trailed off, eyes empty. The children continued to watch until he shook himself and continued.
 
 #+begin_quote
-It was standing on top of me. And it was /heavey/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible... /in me/!
+It was standing on top of me. And it was /heavy/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible... /in me/!
 #+end_quote
 
 The speaker paused only briefly this time.
@@ -307,7 +307,7 @@ He took up /all/ of my parts and then some, squeezed with his mighty beak and pu
 
 For him it truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
-I just remember how effortlessly he tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down his thoat, her making a whole-body bob as he she tossed it down her own throat.
+I just remember how effortlessly he tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down his throat, her making a whole-body bob as he she tossed it down her own throat.
 
 The wet sound of her feeding is something that stays with me. You don't think of what it might sound like. You don't get a chance to find out, unless you are unlucky-lucky[fn:: Crec used this compound to mean, 'Something terrible happened but something miraculous saved me.'] like me.
 
@@ -316,38 +316,42 @@ I could hear important parts of me going down her throat with a gulp.
 The parts you see missing here are the parts she took.
 #+end_quote
 
-Thag took some time in reloushing another of his popular theatrics. He raised his one arm and blindly hopped in a circle, one of his thighs being about half as big around as the other. One ham mostly missing, and a dripping mess of leisurely, gravity-fed feces downward from where his anus used to be.
+Thag took some time in relishing another of his popular theatrics. He raised his one arm and blindly hopped in a circle, one of his thighs being about half as big around as the other. One ham mostly missing, and a dripping mess of leisurely, gravity-fed feces downward from where his anus used to be. Although no one ever made the connection and Thag was definitely not always a mess like this, in this case like in many other cases, Jurd had done the lizard-bird cry in the same way he had done it literally thousands of times, and this time too, Jurd scared the scat out of him with just a small tweak of timing.
 
 He completed his circle and made another famous Caveman Thag smile.
 
-Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction as a friendly wave to a perfectly natural reaction from a child.
+Those in the first few rows could see tears coming from the outside of one of his empty, the only bit of tear duct-work to survive intact. The dripping had little correlation with Thad's mood. No one including himself knew they why or when of his tears.
+
+Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction; a sort of friendly and oddly raptor-like wave, to a perfectly normal child from a horribly disfigured, ancient man.
 
 #+begin_quote
 I had accepted that some time soon, I would fall asleep from all the blood loss and soon after die. It would be peaceful enough an end, I was unable to feel any pain at the time and felt like all this was happening to someone else.
 
-Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird, snake-meal in the middle, wanting to steal a fresh, juicy, living prize away from its tormentor.
+Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird, snake-meal apparent in its middle, wanting to steal a fresh, juicy, living prize away from its tormentor.
 
-I knew it was just making a first pass. This could only improve my situation, but in my hopelessness I wasn't able to feel anything like hope.
+I knew it was just making a first pass. This could only improve my situation, but in my hopelessness I was unable to feel anything in an emotional way.
 
-That was the only exploritory pass it was to make. In the middle of my hazy awareness on this hazy mountain, I was suddenly flung, like a rock from a sling.
+That was the only exploratory pass it was to make. In the middle of my hazy awareness on this hazy mountain, I was suddenly flung, like a rock from a sling.
 
 What I think had happened is this fast, competing bird had more or less tackled the one that was in the middle of eating me, causing it to tumble, where it released me on the up swing, mid-tumble.
 
 I feel like I floated in the air for palm. When I finally landed, it was with a gentle "puff" rather than a jarring splat like I had expected, though not expected to notice.
 
-I had landed in a man-deep, ancient bed of xxx moss that had been accumulating on that misty hillside probably for all-finger all-finger all-finger years.
+I had landed in a man-deep, ancient bed of scab-moss that had been accumulating on that misty hillside probably for all-finger all-finger all-finger years.
 #+end_quote
 
-The children, knowing a thing or two about cave medicine, gave a tempered cheer, for they knew of the healing properties of xxx moss for just such injuries[fn:: Although Thag's surival was considered a miracle, as in this case, a third or more of the man's body had be eaten and the rest run through with talon repeatedly.].
+The children, knowing a thing or two about cave medicine, gave a tempered cheer, for they knew of the healing properties of scab-moss, and they were just the thing for such injuries[fn:: Although Thag's survival was considered a miracle as in his case, one part in four of the man's body had be eaten and the rest run through with talon repeatedly.].
 
 #+begin_quote
 No one, my self included could make any kind of meaningful guess as to how long I lay there. I of course was not there to count the suns.
 
-I will say that when I finally got back, /before/ the many moons of rest with the tender care of my mother <-xxx, I had been gone for all-finger and seven days. The parts that I can remember probably only add up to a few <-xxx days.
+I will say that when I finally got back, /before/ the many moons of rest with the tender care of my mother <-xxx, I had been gone for all-finger and seven days. The parts that I can remember probably only add up to a few days. I suspect it had just rained and misted so much in that soggy mass that I drank up moisture through my skin and so did not develop a thirst.
 
-I had to have been there, slowly recovering in that massive bed of moss for at least all-finger days, with no food, water or awareness.
+I had to have been there, slowly recovering in that massive bed of moss for five or seven days, with no food, water or awareness.
 
-I was just a hopeless husk of a caveman when I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists. I was just mindlessly surviving.
+And it was cold. Never freezing, but cold. I believe my body was also preserved because the cold slowed down its corruption, like when fresh meat is found early spring.
+
+I was just a hopeless husk of a caveman. When I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists. I was just mindlessly surviving.
 
 At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
 
