--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -351,7 +351,7 @@ I had to have been there, slowly recovering in that massive bed of moss for five
 
 And it was cold. Never freezing, but cold. I believe my body was also preserved because the cold slowed down its corruption, like when fresh meat is found early spring.
 
-I was just a hopeless husk of a caveman. When I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists. I was just mindlessly surviving.
+I was just a hopeless husk of a caveman. When I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists[fn:: Not self-aware.]. I was just mindlessly surviving.
 
 At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
 
