--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -355,8 +355,20 @@ I was just a hopeless husk of a caveman. When I was able to, using only down-pow
 
 At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
 
-xxx
+Gritty survival like that is something that surely all of you will eventually experience in your life. It is an inevitability. But it needn't be encountered aimlessly. Learn from me, children.
 #+end_quote
+
+Thag's tale continued with mood-lightening material and some mostly unproductive question and answer. He had worked his way down the mountainside, for it was a very high mountain, and going where ever down-power took him, he encountered poeple. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag.
+
+This is how he ended his story:
+
+#+begin_quote
+Children I feel I have been blessed by The Ender-of-Questions in a way that is so direct and obvious to me, its will has been clearly revealed to me.
+
+My purpose in life is to protect children from danger, and because it was forced upon me, I know lizard-bird. I know them. I want you to make sure that you /learn/ something today. Don't be afraid, but don't be stupid, and /Stay low to Scrub!/
+#+end_quote
+
+"**/Stay Low to Mud!!/**"
 
 * __dummy2__
 
