--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -358,39 +358,34 @@ At some point I was lucky enough to wiggle my way into a brook that I had heard 
 Gritty survival like that is something that surely all of you will eventually experience in your life. It is an inevitability. But it needn't be encountered aimlessly. Learn from me, children.
 #+end_quote
 
-Thag's tale continued with mood-lightening material and some mostly unproductive question and answer. He had worked his way down the mountainside, for it was a very high mountain, and going where ever down-power took him, he encountered poeple. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag.
+Thag's tale continued with mood-lightening material and some mostly unproductive question and answer time at the very end.
 
-This is how he ended his story:
+He had worked his way down the mountainside, for it was a very high mountain, and going where ever down-power took him, he encountered people. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag all the while.
+
+Thereafter you already know the story.
+
+This is how Thag and Jurd ended today's telling:
 
 #+begin_quote
 Children I feel I have been blessed by The Ender-of-Questions in a way that is so direct and obvious to me, its will has been clearly revealed to me.
 
-My purpose in life is to protect children from danger, and because it was forced upon me, I know lizard-bird. I know them. I want you to make sure that you /learn/ something today. Don't be afraid, but don't be stupid, and /Stay low to Scrub!/
+My purpose in life is to protect children from danger, and because this burden was forced upon me, I /know/ lizard-bird. I know them. I want you to make sure that you /learn/ something today. Don't be afraid, but don't be stupid, and /Stay low to Scrub!/
 #+end_quote
 
 "**/Stay Low to Mud!!/**"
+
+#+begin_quote
+Don't forget to pick up your free toys and ask as many questions you like of our volunteers!!
+#+end_quote
 
 * __dummy2__
 
 xxx xxx actually actually /after/ the Mr. Thag stuff. And....action!
 
-But lizard-bird hunt the plains, or the trails, which of course was programmed in as a no-no at even the vaguest hint of "lizard-bird".
+This was part of the life-long education the Men had about lizard-birds. The woods were safe, and yet they weren't. They were also the only reasonable choice.
 
-But off the trails and off the plains meant /in the woods/ adjacent to Snare Plains, a place where rich biome met rich biome and all kinds of killing went on. It was, in literal terms, "between the plains and the woods"[fn:: Which of course is the Crec expression that means 'between a rock and a hard place'.] This was a phrase that was bandied about, but it was no joke to be in there any more than is, say /the undertow/.
+Off the trails and off the plains meant /in the woods/ adjacent to Snare Plains, a place where rich biome met rich biome and all kinds of killing went on. It was, in literal terms, "between the plains and the woods"[fn:: Which of course is the Crec expression that means 'between a rock and a hard place'.] This was a phrase that was bandied about, but it was no joke to be in there any more than is, say to be caught in /the undertow/.
 
-And yet there they were. The forest-child was in-the-know about such things, there was no doubt. Lizard-bird aren't /everywhere/ in Crec. Given plenty of other factors, it took several hundred square miles to support just one. So they are rare, territorial, and deadly deadly. You might think in terms of the lizard-bird being to the Crec what great white sharks are to modern humans, /with the provision that/ modern humans spend all their time swimming at the beach. Their sky-trolling sharks were a lot less hypothetical.
+And yet there they were. The forest-child was in-the-know about such things. There was no doubt. Lizard-bird aren't /everywhere/ in Crec. Given plenty of other factors, it took several hundred square miles to support just one. So they are rare, territorial, and deadly deadly. You might think in terms of the lizard-bird being to the Crec what great white sharks are to modern humans, supposing of course that modern humans spend all their time swimming at the beach. Their sky-trolling sharks were a lot less hypothetical. You were always right on the shore of the sky, unavoidably.
 
-
-xxx xxx xxx
-xxx xxx xxx
-xxx rando
-xxx xxx xxx
-xxx xxx xxx
-
-
-xxx Someone with a clever name scares kids straight about lizard bird awareness xxx
-
-xxx xxx walk? doesn't everybody run? maybe there is the message of
-xxx xxx "run, don't walk!" Lots of self-shaming for having been walking
-
-xxx 4 later: with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
+xxx yyy
