--- a/fragments/bird-awareness.org
+++ b/fragments/bird-awareness.org
@@ -366,7 +366,9 @@ This is how Thag and Jurd ended today's telling:
 #+begin_quote
 Children I feel I have been blessed by The Ender-of-Questions in a way that is so direct and obvious to me, its will has been clearly revealed to me.
 
-My purpose in life is to protect children from danger, and because this burden was forced upon me, I /know/ lizard-bird. I know them. I want you to make sure that you /learn/ something today. Don't be afraid, but don't be stupid, and /Stay low to Scrub!/
+My purpose in life is to protect children from danger, and because this burden was forced upon me, I /know/ lizard-bird. I know them. I want you to make sure that you /learn/ something today. Don't be afraid, but don't be foolish!
+
+And /Stay low to Scrub!/
 #+end_quote
 
 "**/Stay Low to Mud!!/**"
@@ -374,5 +376,5 @@ My purpose in life is to protect children from danger, and because this burden w
 #+begin_quote
 Kids, don't forget to pick up your free toys and ask as many questions you like of our volunteers!!
 
-Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass, when compared to most, he almost made a flippy-flop with both the upper and lower halves, all the while grinning ghoulishly.
+Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass, when compared to most. He almost made a flippy-flop with both the upper and lower halves, all the while grinning ghoulishly.
 #+end_quote
