--- a/003.org
+++ b/003.org
@@ -1,5 +1,5 @@
 #+title: Thag
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../index.css" />
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
 #+OPTIONS: num:nil
 #+OPTIONS: toc:nil
 
