--- a/003.org
+++ b/003.org
@@ -5,7 +5,7 @@
 
 Club-drill was excruciating to the Grav and Gog in ways that they couldn't manage to communicate to others. It was mostly about being told what to do and being criticized by the ignorant and linear thinkers that were inevitably the "top bronze"; often criticized for doing exactly what you were told to do.
 
-Another concept they wouldn't be able to explain or even be aware exists was "selection bias". It's a subtle idea. It would be a while before that idea got identified and tagged.
+Another concept they wouldn't be able to explain or even be aware exists was "selection bias". It's a subtle idea. It would be a while before that one got identified and tagged.
 
 In words that a Crec might understand: The cavemen who made their way to the top in the hierarchy were the type who really liked bossing people about. They were cavemen who were violently uninterested in the wisdom of their plans for /you/.
 
