--- a/003.org
+++ b/003.org
@@ -9,7 +9,7 @@ Another concept they wouldn't be able to explain or even be aware exists was "se
 
 In words that a Crec might understand: The cavemen who made their way to the top in the hierarchy were the type who really liked bossing people about. They were cavemen who were violently uninterested in the wisdom of their plans for /you/.
 
-Given enough cavemen, you will find some outliers. You may not know anyone who likes to give orders, doesn't like to be questioned, and doesn't care whether they are "right" by /your/ definition, but how many CO's[fn:: Caveman Officer] does one need? Not many. And being the scrappy sort, they will, in stages, work their way toward their dream job. Everyone should. Recruiting was no small part of the Armed-Forest. Outreach, recruitment and other kinds of advertising paid off in their growth, and in the recruitment of many particular /types/ to fill corresponding /roles/.
+Given enough cavemen, you will find some outliers. You may not know anyone who likes to give orders, doesn't like to be questioned, and doesn't care whether they are "right" by /your/ definition, but how many CO's[fn:: Cave Officer] does one need? Not many. And being the scrappy sort they will, in stages, work their way toward their dream job. Everyone should. Recruiting was no small part of the Armed-Forest. Outreach, recruitment and other kinds of advertising paid off in their growth, and in the recruitment of many particular /types/ to fill corresponding /roles/.
 
 As a Crec, you could and probably would some day be drafted. But to make a career out of it was a different tack. If drafted and not a CO, you pretty much spent all your time either killing, being killed, or learning to kill. CO's were more the managerial type.
 
