--- a/003.org
+++ b/003.org
@@ -15,7 +15,7 @@ As a Crec you could and probably would some day be drafted. But to make a career
 
 And since your fate was to be involved in all this anyway, /completely voluntary/ "club-drills" were regularly held in locations around the Forest. If bloody combat was going to inevitably happen, one may as well be among the best-prepared.
 
-You may have stopped and wondered yourself: What was it like to be among a sea of men on opposing "teams", all literally in a life-or-death fight with both sharp and blunt weapons of war, /right there in front of you/, wanting to kill you. And you wanting to kill them because of that fact. It's an unimaginably frightening thought when it's both real and likely. Try and touch that kind of terror in yourself, see if you can imagine yourself in that terrifying bloody mess: This is what motivated Grav and Gog to trek all this way, all-too-regularly.
+You may have stopped and wondered yourself: What was it like to be among a sea of men on opposing "teams", all literally in a life-or-death fight with both sharp and blunt weapons of war, /right there in front of you/, wanting to kill you. And you wanting to kill /them/ because of that fact. It's an unimaginably frightening thought when it's both real and likely. Try and touch that kind of terror in yourself, see if you can imagine yourself in that terrifying bloody mess: This is what motivated Grav and Gog to trek all this way, all-too-regularly.
 
 The clubbing-camps were usually overseen by some Great Bear war hero. The one nearest Bhorv Zolk, called Choh-Ov, was surrounded by a kind of suburb named Fayt-Caves, and was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were and are fierce as monkey-business.]. Verk was Choh-Ov's Mother Bear.
 
