--- a/003.org
+++ b/003.org
@@ -19,7 +19,7 @@ You may have stopped and wondered yourself: What was it like to be among a sea o
 
 The clubbing-camps were usually overseen by some Great Bear war hero. "Choh-Ov", the camp nearest Bhorv Zolk was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were and are fierce as monkey-business.]. Verk was Choh-Ov's Mother Bear.
 
-Fayt-Caves, which entirely surrounded Choh-Ov, was a shanty town, but carved out of rock, which really looks nicer than shanty any way you cut it. The settlement surrounding Choh-Ov was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less the yolk of this sad, desperate fried egg.
+Fayt-Caves, which entirely surrounded Choh-Ov, was a shanty town, but carved out of rock, which really looks nicer than shanty any way you cut it. Fayt-Caves was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less the yolk of this sad, desperate fried egg.
 
 And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the norm; surrounding more or less every clubbing-camp in the Forest and its protectorates was a 'bad neighborhood' by most definitions. No one thought this amiss. It was never questioned[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
 
