--- a/003.org
+++ b/003.org
@@ -23,7 +23,7 @@ Fayt-Caves, which entirely surrounded Choh-Ov, was a shanty town, but carved out
 
 And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the norm: Surrounding more or less every clubbing-camp in the Forest and its protectorates was a 'bad neighborhood' by most definitions. No one thought this amiss. It was never questioned[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
 
-Grav and Gog had decided to leave the day after the revelation of Ender's-Sword, giving them the opportunity to take make a leisurely day of it. They only needed to cover one and one half of one all-finger palm[fn:: About 30 'imperial' miles.] of pretty standard jungle, woods, and scrubby savanna. with the way well-traveled and therefore clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit[fn:: With rare exception, all cavepeople woke at dawn, even on deeply overcast days. Another palm of sleep more, if you found a place dark enough, was considered decadent.]. Since the final part of the journey crossed a wide, flat, scrubby plain and the moon was sufficiently bright, they would be able to travel for hours after dark set in.
+Grav and Gog had decided to leave the day after the revelation of Ender's-Sword, giving them the opportunity to take make a leisurely day of it. They only needed to cover one and one half of one all-finger palm[fn:: About 30 'imperial' miles.] of pretty standard jungle, woods, and scrubby savanna with the way well-traveled and therefore clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit[fn:: With rare exception, all cavepeople woke at dawn, even on deeply overcast days. Another palm of sleep more, if you found a place dark enough, was considered decadent.]. Since the final part of the journey crossed a wide, flat, scrubby plain and the moon was sufficiently bright, they would be able to travel for hours after dark set in.
 
 In the worst case, they planned to bevvy one night, wake up early and arrive at the Choh-Ov before conch.
 
