--- a/003.org
+++ b/003.org
@@ -25,7 +25,7 @@ And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely kn
 
 Grav and Gog had decided to leave the day after the revelation of Ender's-Sword, giving them the opportunity to take make a leisurely day of it. They only needed to cover one and one half of one all-finger palm[fn:: About 30 'imperial' miles.] of pretty standard jungle, woods, and scrubby savanna; the way well-traveled and therefore clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit[fn:: With rare exception, all cavepeople woke at dawn, even on deeply overcast days. Another palm of sleep more, if you found a place dark enough, was considered decadent.]. Since the final part of the journey crossed a wide, flat, scrubby plain and the moon was sufficiently bright, they would be able to travel for hours after dark set in.
 
-In the worst case, they planned to bevvy one night, wake up early and arrive at the Choh-Ov before conch.
+In the worst case, they planned to bivouac one night, wake up early and arrive at Choh-Ov before conch.
 
 As Bhorv Zolk faded into the distance, the path to the morning-sun-left-back-side[fn:: Northwest.] was gently rolling hills and low shrubs for several palm. Bhorv Zolk could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, being visible from all this way, and would therefore surely be there when you got back[fn:: And coming back was also a nice, slow 'hello'. You felt 'home' many palm before you actually were.].
 
@@ -79,7 +79,7 @@ In a way, they're similar things; freedom and value. You can use your freedom to
 
 Both men reacted to this idea with great mirth.
 
-Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bevy?"
+Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bivouac?"
 
 "Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence may or may not shortly cost him /his/ life, sometimes even with a bloody smile that humans easily pick up on. 'Get while the getting is good!', the monkey might say, smacking the words with blood.]."
 
