--- a/003.org
+++ b/003.org
@@ -29,7 +29,9 @@ In the worst case, they planned to bivouac one night, wake up early and arrive a
 
 As Bhorv Zolk faded into the distance, the path to the morning-sun-left-back-side[fn:: Northwest.] was gently rolling hills and low shrubs for a palm or more. Bhorv Zolk could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, being visible from all this way, and would therefore surely be there when you got back[fn:: And coming back was also a nice, slow 'hello'. You felt 'home' many palm before you actually were.].
 
-Gog hummed, whistled and yipped an improvised song, that Grav didn't really want to admit was actually pretty good.
+Gog hummed, whistled, yipped, and struck various parts of his body, making a sort of improvised song.
+
+Regarding "feedback" of any kind, the two men had come to expect nothing but cutting, merciless criticism from the other. It was their stick[fn:: While "comedy" in Crec was not recognized as an art form, much less a profession, certain people were marked as cut-ups and occasionally gifted in the art of inducing laughter. To the extent that it existed, comedy in Crec was always of the physical sort and therefore often employed a stick. One could use a stick to rap another over the head, as a way to punctuate observations about their ineptness. One could use a stick to trip another, causing an often bloody spill that was sure to snare onlookers. Therefore, one's "signature" in a comedy performance sense as referred to as one's "stick".]. Grav withheld his commentary on Gog's music. Grav would never say such out loud, but Grav was definitely quite talented as a song-maker.
 
 He'd worked on convincing Gog to have a visit with Kapitle, the music-scratcher nearest Bhorv Zolk. Business was good and all number of copy-protection[fn:: explain!!] schemes were the key to success, Kapitle knew[fn:: But would not share.] He had a regular rotation of all-finger-and throat-and-drum-choirs that would snare[fn:: As in the impromptu bush trap. Their word for "kill at" or "really make a killing".] his most profitable demographic: all-finger-and boys trying to woo their crush by performing some music or other, using /his/ scratching standards and training system.
 
