--- a/003.org
+++ b/003.org
@@ -35,7 +35,7 @@ Gog hummed, whistled, yipped, and struck various parts of his body, making a sor
 
 He'd tried working on convincing Gog to have a visit with Kapitle, the music-scratcher nearest Bhorv Zolk. Business was good, and all manner of copy-protection[fn:: explain!!] schemes were the key to success, Kapitle knew[fn:: But would not share.]. He had a regular rotation of all-finger-and throat-and-drum-choirs that would snare[fn:: As in the impromptu bush trap. Their word for "kill at" or "really make a killing".] his most profitable demographic: all-finger-and boys trying to woo their crush by performing some music or other, using /his/ scratching standards and training system.
 
-Sell the materials needed to perform a cover of the latest hit was really all there was in the music business, outside of performing of course, for which you would need security and acoustical expertise.
+Selling the materials needed to perform a cover of the latest hit was really all there was in the music business, outside of performing of course, for which you would need security and acoustical expertise.
 
 Grav just enjoyed the well selected traveling music and thought a lot about how to best navigate the next few days, not for any particular reason other than one should always plan ahead.
 
