--- a/003.org
+++ b/003.org
@@ -33,11 +33,11 @@ Gog hummed, whistled, yipped, and struck various parts of his body, making a sor
 
 "Feedback" of any kind between the two men usually took the form of cutting, merciless criticism from one toward the other. In a way, it was their stick[fn:: While "comedy" in Crec was not recognized as an art form, much less a profession, certain people were marked as cut-ups and some were clearly gifted in the art of inducing laughter. To the extent that it existed, comedy in Crec was always of the physical sort and therefore often employed a stick. One could use a stick to rap another over the head, as a way to punctuate observations about their ineptness. One could use a stick to trip another, causing an often bloody spill that was sure to snare onlookers into laughter. Therefore, one's "signature" in a comedy sense was referred to as one's "stick".]. Grav withheld his commentary on Gog's music. Grav would never say such out loud, but Gog was definitely quite talented as a song-maker.
 
-He'd tried working on convincing Gog to have a visit with Kapitle, the music-scratcher nearest Bhorv Zolk. Business was good, and all manner of copy-protection[fn:: explain!!] schemes were the key to success, Kapitle knew[fn:: But would not share.]. He had a regular rotation of all-finger-and throat-and-drum-choirs that would snare[fn:: As in the impromptu bush trap. Their word for "kill at" or "really make a killing".] his most profitable demographic: all-finger-and boys trying to woo their crush by performing some music or other, using /his/ scratching standards and training system.
+He'd tried working on convincing Gog to have a visit with Snogny-Dodk, the music-scratcher nearest Bhorv Zolk. Business was good, and all manner of copy-protection[fn:: Appendix: Snogny-Dodk Copy-Protection Technology] schemes were the key to success, Snogny-Dodk knew[fn:: But would not share.]. He had a regular rotation of all-finger-and throat-and-drum-choirs that would snare[fn:: As in the impromptu bush trap. Their word for "kill at" or "really make a killing".] his most profitable demographic: all-finger-and boys trying to woo their crush by performing some music or other, using /his/ scratching standards and training system.
 
 Selling the materials needed to perform a cover of the latest hit was really all there was in the music business, outside of performing of course, for which you would need security and acoustical expertise.
 
-Grav just enjoyed the well selected traveling music and thought a lot about how to best navigate the next few days, not for any particular reason other than one should always plan ahead.
+Knowing that he would get no movement from Gog, who liked to play friendly-decorator-bird[fn:: False-modesty.], Grav decided to just enjoy the well selected traveling music and think a squirrel-hoard about how to best navigate the next few days. This was just baseline thinking-ahead for him. Nothing was worrying him in particular.
 
 Would word have gotten out? Verk would not be at the camp, not feeling any particular need to be there. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone <-xxx maybe they meet up on the way home xxx
 
