--- a/Spoilers.org
+++ b/Spoilers.org
@@ -49,6 +49,9 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- Snogny-Dodk copy protection:
+  - Some scheme has a laughable workaround
+  - He works on getting "the authorities" to prevent "theft"
 - G&G realize that any kind of "penalty" for anything has to be anchored by another "penalty". The first three steps might be a "fine", the fourth "torture", the fifth, "death"... but all must be anchored with death. Force is inevitable. something!! <-xxx
 - A ridiculously huge flag could fly atop Bhorv Zolk (on occasion, for reason)
 - There are a couple of colourfoul characters that could exist:
