--- a/003.org
+++ b/003.org
@@ -39,7 +39,7 @@ Selling the materials needed to perform a cover of the latest hit was really all
 
 Knowing that he would get no movement from Gog, who liked to play friendly-decorator-bird[fn:: False-modesty.], Grav decided to just enjoy the well selected traveling music and think a squirrel-hoard about how to best navigate the next few days. This was just baseline thinking-ahead for him. Nothing was worrying him in particular.
 
-Would word have gotten out? Verk would not be at the camp, not feeling any particular need to be there. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone <-xxx maybe they meet up on the way home xxx
+Would word have gotten out? Not feeling any particular need to be there, Verk, whose methods were not questioned, would not be at the camp. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone.
 
 A few palm outside of Fayt-Caves, Verk owned what would be considered a castle almost universally; a point that the men would pass late that evening, if they kept their pace.
 
