--- a/003.org
+++ b/003.org
@@ -39,7 +39,9 @@ Selling the materials needed to perform a cover of the latest hit was really all
 
 Knowing that he would get no movement from Gog, who liked to play friendly-decorator-bird[fn:: False-modesty.], Grav decided to just enjoy the well selected traveling music and think a squirrel-hoard about how to best navigate the next few days. This was just baseline thinking-ahead for him. Nothing was worrying him in particular.
 
-Would word about their find have made its way yet? Not feeling any particular need to be there, Verk, whose methods were not questioned, would not be at the camp. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone. Verk, his xxx ret-a-new xxx and Under-Men would not have returned to Fayt-Caves yet. Verk could easily send a message. He probably had, given that he was now, to none of their surprise, going to wrap himself all the around this[fn:: 'Take credit for'. If you are 'half wrapped around' you are taking half credit. If you are 'wrapped all the way around', you were taking full credit. The "unearned" part is always implied.].
+Would word about their find have made its way yet? Not feeling any particular need to be there, Verk, whose methods were not questioned, would not be at the camp. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone. Verk, retinue, and Under-Men would not have returned to Fayt-Caves yet.
+
+Verk could easily send a message. He probably had, given that he was now, to none of their surprise, going to wrap himself all the around this[fn:: 'Take credit for'. If you are 'half wrapped around' you are taking half credit. If you are 'wrapped all the way around', you were taking full credit. The "unearned" part is always implied.].
 
 xxx we use Under-Men to both mean "verk's thugs" and "the learned men in the ancient-speak burrow"... must untangle. xxx
 
