--- a/003.org
+++ b/003.org
@@ -45,7 +45,7 @@ Verk could easily send a message. He probably had, given that he was now, to non
 
 xxx we use Under-Men to both mean "verk's thugs" and "the learned men in the ancient-speak burrow"... must untangle. xxx
 
-And even if none of that, there was a regular flow of traffic to and from Fayt-Caves; men attending club-drill, commerce, newly-married baby-makers relocating to their new home[fn:: This journey, no matter how long, was always made alone. Crec Cavewomen were nearly universally safe from abuse at the hands of men, but that was not the only risk that women uniquely share as a group. Survival of any but the most hardy among women was legitimately at risk on any lone trek that took more than one day. Of course each additional night added to the risk. Everyone was at risk at all times, and especially at night. For men, this risk was thought to be "manageable". It was markedly greater for any lone women.].
+And even if none of that, there was a regular flow of traffic to and from Fayt-Caves; men attending club-drill, commerce, newly-married baby-makers relocating to their new home[fn:: This journey, no matter how long, was always made alone. Crec Cavewomen were nearly universally safe from abuse at the hands of men, but that was not the only risk that women uniquely share as a group. Survival of any but the most hardy among women was legitimately at risk on any lone trek that took more than one day. Of course each additional night added to the risk. Everyone was at risk at all times, but more so at night. For men, this risk was thought to be "manageable". It was markedly greater for any lone women. It was considered bad form to approach a women while on her selection-journey. A pious caveman would politely ignore a women being mauled by a tooth-cat for example.].
 
 A few palm outside of Fayt-Caves, Verk owned what would be considered a castle almost universally; a point that the men would pass late that evening, if they kept their pace.
 
