--- a/003.org
+++ b/003.org
@@ -57,7 +57,7 @@ Without breaking his stride, Gog abruptly stopped his music and looked at Grav, 
 
 "You mean Ender's-Stump?"
 
-Grav's run became a staggering, rhythmic stomp as he laughed maniacally while continuing to run. He eventually gave up on that and let himself fall into an enormous healthy, dark-purple heather shrub. He continued to laugh face-down at the dirt and detritus at the ancient shrub's base. He noticed a worm quickly escaping downwards in his haze of mirth.
+Grav's run became a staggering, rhythmic stomp as he laughed maniacally while continuing to run. He eventually gave up on that and let himself fall into an enormous dark-purple heather shrub. He continued to laugh face-down at the dirt and detritus at the ancient shrub's base. Through his teary eyes he noticed an earthworm escaping downwards, away from him.
 
 He eventually righted himself, making a lot of noise as he pushed himself up, snapping small branches and spitting out a sparse cloud of tiny purple petal glitter and twigs that had ended up in his open mouth.
 
